# Accounting_app_mnn

./: .clangd  .gitignore  CMakeLists.txt  README.md
src/: llm_demo.cpp
